feat: criando estilos globais e layout

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -15,10 +15,15 @@ html {
 }
 
 :root {
-  --background: #f5f6fa;
+  --background: #121212;
 
-  --primary: #373D4F;
-  --secondary: #9098AE;
+  --primary: #fff;
+  --secondary: #b3b3b3;
+  --terciary: #181818;
+
+
+  --black: #000000;
+  --green: #3bd760;
 }
 
 body {
