--- a/src/components/Layout/styles.module.scss
+++ b/src/components/Layout/styles.module.scss
@@ -41,7 +41,14 @@
       z-index: -1;
       width: 100%;
       height: 332px;
-      background: var(--background-header);
+      background-color: rgb(80, 40, 240);
+      background-image: linear-gradient(rgba(0,0,0,.6) 0,#121212 100%),var(--background-noise);
+      // background: var(--background-header);
+    }
+
+    &.active--scroll:before {
+      height: 64px;
+      background-image: none;
     }
   }
 
