--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -37,16 +37,17 @@
 .profile {
   position: relative;
 
-  .profile--info {
+  &--info {
     display: flex;
     align-items: center;
     justify-content: space-between;
 
+    margin-left: 16px;
     padding-right: 8px;
     border-radius: 23px;
     background: rgba(0,0,0,.7);
 
-    .profile--info__image {
+    &__image {
       width: 32px;
       height: 32px;
       border-radius: 50%;
@@ -60,19 +61,66 @@
     }
 
     strong {
+      user-select: none;
       font-size: 0.875rem;
       line-height: 1rem;
       padding: 0 8px;
     }
 
     svg {
-      width: 1rem;
+      width: 1.125rem;
       height: auto;
+
+      transition: transform 0.4s;
+    }
+
+    &:hover, &.active {
+      background: var(--black-light);
+    }
+
+    &.active svg {
+      transform: rotate(-180deg);
     }
   }
 
-  .profile--menu {
-    display: none;
-    visibility: hidden;
+  &--menu {
+    position: absolute;
+    top: 40px;
+    left: 0;
+
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+
+    width: 100%;
+    padding: 4px;
+    border-radius: 4px;
+
+    background: var(--black-light);
+    box-shadow: 0 16px 24px rgb(0 0 0 / 30%), 0 6px 8px rgb(0 0 0 / 20%);
+  }
+}
+
+.profile--menu__item {
+  padding: 12px;
+
+  font-size: 0.875rem;
+  line-height: 1rem;
+  color: var(--secondary);
+
+  &:hover {
+    background: rgba(255,255,255,.1);
+  }
+
+  a {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  
+    svg {
+      width: 1.125rem;
+      height: auto;
+    }
   }
 }
