--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -7,6 +7,7 @@
   height: auto;
   padding: 16px 16px 16px 32px;
 
+  z-index: 2;
   display: flex;
   align-items: center;
   justify-content: space-between;
