--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -1,8 +1,16 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  row-gap: 40px;
+
+  padding-bottom: 40px;
+}
+
 .cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 16px 24px;
-  margin-top: 16px;
 }
 
 .card {
@@ -26,54 +34,121 @@
     flex: 1;
     font-size: 1rem;
     line-height: 1.5rem;
-
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-  }
-
-  .card--button {
-    width: 58px;
-    height: 100%;
-    display: flex;
-
-    button {
-      display: flex;
-
-      font-size: 1rem;
-      line-height: 1.5rem;
-
-      width: 48px;
-      height: 48px;
-      margin: auto;
-      border-radius: 50%;
-      background: var(--green);
-      box-shadow: 0 8px 8px rgb(0 0 0 / 30%);
-
-      opacity: 0;
-
-      transition: all 0.4s;
-
-      svg {
-        color: var(--black);
-        margin: auto;
-      }
-
-      &:hover {
-        transform: scale(1.05);
-      }
-    }
   }
 
   &:hover, &.active {
     background: rgba(255, 255, 255, 0.2);
 
-    .card--button button {
+    div button {
       opacity: 1;
       transform: scale(1.05);
     }
+  }
+}
+
+.playlist--title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  font-size: 1.5rem;
+  line-height: 1.75rem;
+  margin-bottom: 16px;
+
+  h2 {
+    font-size: 1.5rem;
+    line-height: 1.75rem;
+    letter-spacing: -0.04em;
+  }
+
+  a {
+    font-size: 0.75rem;
+    line-height: 1.5rem;
+    letter-spacing: 0.1em;
+    font-weight: 500;
+    color: var(--secondary-light);
+    text-transform: uppercase;
+  }
+
+  .playlist--title__link:hover, a:hover {
+    text-decoration: underline;
+  }
+}
+
+.playlists {
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
+}
+
+.playlist {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+  width: 182px;
+  height: 260px;
+
+  padding: 16px;
+  border-radius: 8px;
+  background: var(--terciary);
+
+
+  .playlist--image {
+    width: 150px;
+    height: 150px;
+    
+    position: relative;
+
+    div { // PlayButton
+      position: absolute;
+      bottom: 8px;
+      right: 8px;
+
+      height: 48px;
+
+      button {
+        transform: translateY(0);
+      }
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 2px;
+    }
+  }
+
+  &:hover {
+    cursor: pointer;
+    background: var(--black-light);
+
+    div button { // PlayButton
+      opacity: 1;
+      transform: translateY(-10px);
+
+      &:hover {
+        transform: translateY(-10px) scale(1.05);
+      }
+    }
+  }
+
+  .playlist--content {
+    min-height: 62px;
+  }
+
+  strong {
+    font-size: 1rem;
+    line-height: 1.5rem;
+
+    margin: 16px 0 4px;
+  }
+
+  p {
+    font-size: 0.875rem;
+    line-height: 1rem;
+    color: var(--secondary);
   }
 
 }
