--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -99,7 +99,8 @@
     height: 150px;
     
     position: relative;
-
+    box-shadow: 0 8px 24px rgb(0 0 0 / 50%);
+    
     div { // PlayButton
       position: absolute;
       bottom: 8px;
