--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -17,36 +17,52 @@
     flex-direction: column;
     align-items: stretch;
 
-    opacity: 0.7;
     list-style: none;
+
+    li {
+      opacity: 0.7;
+      transition: 0.4s all;
+
+      &:hover {
+        opacity: 1;
+      }
+    }
   }
 }
 
 .navigation {
   display: flex;
   flex-direction: column;
-  row-gap: 2rem;
+  row-gap: 32px;
 
-  margin: 2rem 0 0;
+  margin: 32px 0 0;
 
   a {
     display: flex;
     align-items: center;
-    column-gap: 1rem;
+    column-gap: 18px;
 
     font-size: 0.875rem;
     line-height: 1rem;
     font-weight: 700;
 
     > svg {
-      width: 2rem;
+      width: 26px;
       height: auto;
+
+      path {
+        fill: var(--secondary-light);
+      }
     }
   }
 }
 
-.links a {
-  padding: 4px 24px;
+.links {
+  row-gap: 4px;
+
+  a {
+    padding: 4px 24px;
+  }
 }
 
 .controll a {
@@ -66,7 +82,6 @@
 .icon-background {
   width: 1.5rem;
   height: 1.5rem;
-  background: blue;
   border-radius: 2px;
   display: flex;
   
@@ -105,11 +120,8 @@
     font-size: 0.875rem;
     line-height: 1.25rem;
 
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 1; /* number of lines to show */
-            line-clamp: 1;
-    -webkit-box-orient: vertical;
+    &:hover {
+      color: #fff;
+    }
   }
 }
