--- a/src/components/Playlist/Tracks/styles.module.scss
+++ b/src/components/Playlist/Tracks/styles.module.scss
@@ -1,3 +1,36 @@
+.header {
+  display: grid;
+  grid-template-columns: 18px 3fr 2fr 2fr 115px;
+  column-gap: 16px;
+  align-items: center;
+  padding: 0 16px;
+
+  span {
+    font-size: 0.75rem;
+    line-height: 1rem;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: rgba(255, 255, 255, 0.7);
+
+    display: flex;
+    align-items: center;
+  }
+
+  svg {
+    margin-left: auto;
+
+    path{
+      fill: var(--secondary);
+    }
+  }
+}
+
+.divider {
+  border: 0;
+  border-top: 1px solid rgba(255,255,255,.1);
+  margin: 8px 0 16px;
+}
+
 .traks {
   display: flex;
   flex-direction: column;
@@ -16,30 +49,12 @@
 
   color: rgba(255, 255, 255, 0.7);
 
-  .track--play-and-number {
-    display: flex;
-    justify-content: center;
-    
-    span {
-      font-size: 1rem;
-      line-height: 1.5rem;
-    }
-
-    button {
-      display: none;
-      visibility: hidden;
-
-      svg {
-        width: 1rem;
-      }
-    }
-  }
-
-
   a, time {
     font-size: 0.875rem;
     line-height: 1rem;
     font-weight: 400;
+
+    user-select: none;
   }
 
   .track--duration {
@@ -65,6 +80,14 @@
     }
   }
 
+  > button {
+    visibility: hidden;
+
+    &.like {
+      visibility: visible;
+    }
+  }
+
   a:hover {
     cursor: pointer;
     text-decoration: underline;
@@ -83,6 +106,33 @@
         display: flex;
         visibility: visible;
       }
+    }
+
+    > button {
+      visibility: visible;
+    }
+  }
+}
+
+button.like {
+  visibility: visible;
+}
+
+.track--play-and-number {
+  display: flex;
+  justify-content: center;
+  
+  span {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  button {
+    display: none;
+    visibility: hidden;
+
+    svg {
+      width: 1rem;
     }
   }
 }
